Upgrades gradle to v8.1.1, removes deprecated constructor calls (#498)
This PR adds support for building `ion-java` with Java 20, the most recent 
release. It does this by upgrading Gradle from `8.0.2` to `8.1.1` and specifying
a more recent version of the `jacoco` plugin.

It also replaces several uses of (now deprecated) boxed primitive constructors.
For example:
* `new Integer(...)` to `Integer.valueOf(...)`
* `new Float(...)` to `Float.valueOf(...)`
* `new Double(...)` to `Double.valueOf(...)`